Change model to snowflake